Fix vertical alignment of row header buttons

--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -778,4 +778,8 @@ Print styles
         content: attr(data-label) ": ";
         font-weight: 700;
     }
+
+    .table-collapsible tbody th .btn {
+        vertical-align: baseline;
+    }
 } 
